--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>title</title>
-  <link rel="stylesheet" href="styles.css" type="text/css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>title</title>
+    <link rel="stylesheet" href="src/css/bootstrap.css" type="text/css" />
+   
+  </head>
+  <body>
 
-<script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
-  
+
+
+
+
+    
+    
+    <script src="src/js/jquery-3.6.0.js"></script>
+    <script src="src/js/bootstrap.bundle.js"></script>
+    <script src="src/js/jscript"></script>
+
   </body>
 </html>
