LF will be replaced by CRLF in README.md- docker

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <script src="src/js/jquery-3.6.0.js"></script>
     <script src="src/js/bootstrap.bundle.js"></script>
   </head>
-  <body>
+  <body class="index">
     <div class="container-fluid" aria-label="Restaurant review system application" role="application">
       <header class="row">
 
