--- a/client/index.html
+++ b/client/index.html
@@ -163,23 +163,16 @@
       </h6>
     </div>
 
-
       <!--  Search bar for finding restaurants --> 
-      <form class="form-inline d-flex flex-row  col-12  mt-5" aria-label="search by name section" role="search">
+      <form class="form-inline d-flex flex-row  col-lg-8 col-12  mt-5" aria-label="search by name section" role="search">
         <label for="main-search" class="d-none">Restaurant search name </label>
-        <input
-        id = "main-search"
-          class="form-control rounded-0 rounded-start w-100" 
-          type="search"
-        placeholder="Restaurant search name"
-          aria-label="Enter a restaurant name"
-        />
+        <input id="main-search" class="form-control rounded-0 rounded-start w-100" type="search" placeholder="Restaurant search name" aria-label="Enter a restaurant name">
         <button class="btn btn-dark rounded-0 rounded-end col-lg-1 col-3" type="submit">Search</button>
         </form>
 
-        <div class="col-12"><a class="btn active text-light w-100 btn-outline-dark rounded-0 mt-5" aria-current="true" href="client/src/review.html">Review </a></div>
+        <div class="col-lg-8 col-12 d-flex justify-content-center"><a class="btn active text-light col-12 btn-outline-dark rounded-0 mt-5" aria-current="true" href="client/src/review.html">Review </a></div>
 
-  </main>
+  </main> 
     </div>
 
 
