--- a/client/index.html
+++ b/client/index.html
@@ -320,12 +320,12 @@
 
       <div class="modal-body col-12 d-flex flex-column ">
 
-      <form class="w-100 d-flex flex-column align-items-center">
+      <form action="http://localhost:1234/api/user/" class="w-100 d-flex flex-column align-items-center">
           <label for="username-login" class="d-none m-1">Enter username into text box</label>
           <input id="username-login"  class="w-100 m-1 rounded-1" name="username" type="text" placeholder="Username"  required minlength="1" maxlength="300" />
           
           <label for="password-login" class="d-none m-1">Enter password into text box</label>
-          <input id="password-login" class="w-100 m-1 rounded-1" name="password"  type="text"  placeholder="Password"  required minlength="1" maxlength="300" />
+          <input id="password-login" class="w-100 m-1 rounded-1" name="password"  type="password"  placeholder="Password"  required minlength="1" maxlength="300" />
       
           <button id="submit-login" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="submit">Submit</button>
 
