feat: login.html: remove action

--- a/client/index.html
+++ b/client/index.html
@@ -320,7 +320,7 @@
           </div>
 
           <div class="modal-body col-12 d-flex flex-column">
-            <form action="http://localhost:1234/api/user" class="w-100 d-flex flex-column align-items-center">
+            <form  class="w-100 d-flex flex-column align-items-center">
               <label for="username-login" class="d-none m-1"
                 >Enter username into text box</label
               >
