feats: limit for username and password amended to 20 chars

--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
             >
               <div class="nav-item col-lg-4 col-12">
                 <a
-                  class="btn active text-light w-100 btn-outline-dark rounded-0"
+                  class="btn active text-light w-100 btn-outline-dark rounded-0 d-none"
                   aria-current="true"
                   href="review.html"
                   >Review
@@ -112,7 +112,7 @@
                   </div>
                   <div class="dropdown-item w-100 col-12">
                     <button
-                      class="btn w-100 btn-outline-dark rounded-0"
+                      class="btn w-100 btn-outline-dark rounded-0 d-none"
                       type="button"
                       data-bs-toggle="modal"
                       data-bs-target="#Login_modal"
@@ -334,7 +334,7 @@
                 placeholder="Username"
                 required
                 minlength="1"
-                maxlength="300"
+                maxlength="20"
               />
 
               <label for="password-login" class="d-none m-1"
@@ -348,7 +348,7 @@
                 placeholder="Password"
                 required
                 minlength="1"
-                maxlength="300"
+                maxlength="20"
               />
 
               <button
