feat: Pictures for help section are changed

--- a/client/help.html
+++ b/client/help.html
@@ -214,14 +214,14 @@
 
 
         <div class=" col-12 d-flex flex-row flex-wrap">
-          <section class="col-12 col-lg-6 d-flex align-items-left flex-column border p-3">
+          <section class="col-12 col-lg-6 d-flex align-items-left flex-column border p-3 ">
             <header>
 
               <h2>To login:</h2>
             </header>
 
 
-            <ul>
+            <ul style="height:10em !important">
               <li>Go to the top navigation of the page </li>
 
               <li>Click on account actions  </li>
@@ -229,8 +229,6 @@
               <li>Click on Login </li>
 
               <li>Enter your username between 1 and 20 characters</li>
-
-              <li>Enter your password in a text box between 1 and 20 characters </li>
 
               <li>Enter your password in a text box between 1 and 20 characters </li>
 
@@ -252,7 +250,7 @@
           </header>
 
 
-            <ul>
+            <ul style="height:10em !important">
             <li>Go to the top navigation of the page </li>
 
             <li>Click on account actions  </li>
@@ -263,7 +261,11 @@
 
             <li>Enter your password in a text box between 1 and 20 characters </li>
 
-            <li>Press submit. If successful, the pop will tell you </li>
+
+            <li>Renter your password in a text box between 1 and 20 characters </li>
+
+
+              <li>Press submit. If successful, the pop will tell you </li>
 
 
 
@@ -281,11 +283,11 @@
             <h2>To sign out:</h2>
             </header>
 
-
-            <ul>
+            <ul style="height:10em !important">
             <li>Go to the top navigation of the page </li>
 
-            <li>Click on account actions  </li>
+            <li>Click on account ac
+              tions  </li>
 
             <li>Click on sign out </li>
 
@@ -303,14 +305,14 @@
           <h2>To add a business:</h2>
             </header>
 
-          <ul>
+          <ul style="height:10em !important">
             <li>Go to the top navigation of the page </li>
 
             <li>Click on account actions  </li>
 
             <li>Click on add a business </li>
 
-            <li>Enter your business / restaurant name between 1 and 32 characters</li>
+            <li>Enter your business / restaurant name between 1 and 34 characters</li>
 
             <li>Enter your password in a text box</li>
 
@@ -455,7 +457,7 @@
                   placeholder="restaurant name"
                   required
                   minlength="1"
-                  maxlength="300"
+                  maxlength="34"
           />
 
           <button
