feat: Pictures for help section are changed and code amended for clearing fields after submit

--- a/client/help.html
+++ b/client/help.html
@@ -164,37 +164,45 @@
     <div
             class="
         bg-grey
-        p-1
         col-12 col-sm-12
         align-self-center align-items-center
-        pt-5
+        pt-2
       "
             aria-label="banner"
             role="banner"
     >
-      <header
+      <div
               class="
+        bg-light
+        p-1
+        col-12 col-sm-12
+        align-self-center align-items-center
+        mt-5
+      "
+              aria-label="banner"
+              role="banner"
+      >
+        <header
+                class="
           d-flex
-          bg-light
           flex-column
           col-12
           p-1
           align-self-center align-items-center
-
         "
-      >
-        <h2 class="display-4 bg-black text-light text-center col-12 p-3">
-          The User Documentation
-        </h2>
-
-        <h6
-                class="bg-secondary text-light text-center col-10 p-1"
-                aria-label="Welcome login message"
         >
-          Welcome user[insert username] or Guest
-        </h6>
-      </header>
+          <h1 class="display-4 bg-black text-light text-center col-12 p-2">
+            User documentation
+          </h1>
 
+          <h6
+                  class="bg-secondary text-light text-center col-10 p-1"
+                  aria-label="Welcome login message"
+          >
+            Welcome user[insert username] or Guest
+          </h6>
+        </header>
+      </div>
 
 
         <article class="article bg-light  col-12  p-3">
