--- a/client/index.html
+++ b/client/index.html
@@ -321,10 +321,10 @@
 
             <form class="w-100 d-flex flex-column align-items-center">
               <label for="username-login" class="d-none m-1">Enter username into text box</label>
-              <input id="username-login"  class="w-100 m-1 rounded-1" name="username" type="text" placeholder="Username"  required minlength="1" maxlength="20" />
+              <input id="username-login"  class="w-100 m-1 rounded-1" type="text" placeholder="Username"  required minlength="1" maxlength="20" />
 
               <label for="password-login" class="d-none m-1">Enter password into text box</label>
-              <input id="password-login" class="w-100 m-1 rounded-1" name="password"  type="password"  placeholder="Password"  required minlength="1" maxlength="20" />
+              <input id="password-login" class="w-100 m-1 rounded-1"   type="password"  placeholder="Password"  required minlength="1" maxlength="20" />
 
               <button id="submit-login" class="btn btn-dark rounded-0 w-100 m-1 btn-success" type="button">Submit</button>
 
@@ -405,10 +405,10 @@
             </div>
 
             <div
-              class="alert alert-faliure d-none"
+              class="alert alert-fal d-none"
               aria-label="error alert"
               role="alert"
-              aria-hidden="true",
+              aria-hidden="true"
             >
               Error: Business name wasn't added because it already exists.
             </div>
