--- a/client/review.html
+++ b/client/review.html
@@ -1,4 +1,4 @@
-<!-- header component with dependencies --> 
+<!-- header component with dependencies -->
 
 <!DOCTYPE html>
 <html lang="en-gb">
@@ -203,10 +203,68 @@
       </header>
     </div>
 
-    <!-- form component for creating a reviewer restaurant review  -->
 
+    <!-- form component for creating a reviewer restaurant review  -->
+    <div id="inner-search-section" class="card col-9 mt-5">
+
+                <form >
+                    <div class="card-header">
+                        <h5 class="card-title d-inline">Create a Customer Review</h5>
+
+
+                        <button id="inner-search-section-button" class="mx-md-2 col-sm-4 col-12 btn btn-dark rounded-1 d-inline" type="button">Submit</button>
+
+                    </div>
+                    <div class="card-body col-12">
+
+
+
+
+                        <fieldset class="col-12 d-flex align-content-center justify-content-center">
+
+                            <section class="w-100 bg-secondary p-1 " aria-label="Value for money rating section">
+
+                                <div class="form-check mt-4 w-100 p-0">
+                                    <!--  Search bar for finding restaurants -->
+                                    <form action="" method="POST" class="form-inline w-100  " aria-label="search by name section - maximum 32 characters including spaces" role="search">
+                                        <label for="inner-search-input" class="d-none">Restaurant search name (max 32 characters including spaces) </label>
+                                        <input
+                                                id="inner-search-input"
+                                                list="inner-search-list"
+                                                class="form-control rounded w-100 accordion-body"
+                                                minlength="1"
+                                                maxlength="34"
+                                                type="search"
+                                                placeholder="Restaurant search name"
+                                                aria-label="Enter a restaurant name"
+                                        />
+                                        <datalist id="inner-search-list"  class="w-100"  >
+
+                                            <option  value="" >
+
+
+                                        </datalist>
+                                    </form>
+                                </div>
+
+
+
+                            </section>
+
+
+
+
+
+                        </fieldset>
+
+                    </div>
+
+                </form>
+
+    </div>
  <div class="card col-md-9 mt-5 col-12">
-          
+     <!-- search for restaurant component-->
+
     <form >
     <div class="card-header">
          <h5 class="card-title d-inline">Create a Customer Review</h5>
@@ -407,9 +465,13 @@
 
   </div>
 
+
+
 </form>
 
 </div>
+
+
    
   </main>
     </div>
@@ -564,7 +626,8 @@
       </div>
       </div>
   </div>
- 
+
+
 
   
   <script src="src/js/jscript.js"></script>
