feat: Users can add new restaurant entries

--- a/client/index.html
+++ b/client/index.html
@@ -152,7 +152,7 @@
               placeholder="Restaurant search name"
               aria-label="Enter a restaurant name"
             />
-            <button class="btn btn-dark rounded-0 rounded-end" type="submit">
+            <button class="btn btn-dark rounded-0 rounded-end" type="button">
               Search
             </button>
           </form>
@@ -232,12 +232,14 @@
             placeholder="Restaurant search name"
             aria-label="Enter a restaurant name"
           />
+
           <button
             class="btn btn-dark rounded-0 rounded-end col-lg-1 col-3"
-            type="submit"
+            type="button"
           >
             Search
           </button>
+
         </form>
 
         <div class="col-lg-8 col-12 d-flex justify-content-center">
@@ -253,7 +255,7 @@
 
 
  <!-- Sign up template -->
- <div class="modal" id="sign-up_modal">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               <div class="modal" id="sign-up_modal">
   <div class="modal-dialog">
     <div class="modal-content">
 
@@ -302,7 +304,7 @@
     </div>
   </div>
 
-  
+
 </div>
     <!-- Login template -->
     <div class="modal" id="Login_modal">
