feat: Users can search for review

--- a/client/index.html
+++ b/client/index.html
@@ -130,7 +130,7 @@
             </div>
           </div>
           <!--  Search bar for finding restaurants -->
-          <form
+          <form id="main-search-form"
             class="
               form-inline
               d-flex
