--- a/client/review.html
+++ b/client/review.html
@@ -262,7 +262,7 @@
                 </form>
 
     </div>
- <div class="card col-md-9 mt-5 col-12 d-none">
+ <div id="form-customer-review-section"class="card col-md-9 mt-5 col-12 d-none">
      <!-- review a restaurant component-->
 
     <form id="form-customer-review">
